--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="menu-links">
         <li><a href="#about" onclick="toggleMenu()">About</a></li>
-        <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+        <li><a href="#Skills" onclick="toggleMenu()">Skills</a></li>
         <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
         <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
       </div>
@@ -60,7 +60,7 @@
           src="./assets/linkedin.png"
           alt="My LinkedIn profile"
           class="icon"
-          onclick="location.href='https://linkedin.com/'"
+          onclick="location.href='https://linkedin.com/in/ayodele-rapheal-ojo-17426b12b'"
         />
         <img
           src="./assets/github.png"
@@ -90,7 +90,7 @@
               alt="Experience icon"
               class="icon"
             />
-            <h3>Experience</h3>
+            <h3>Skills</h3>
             <p>Software engineering <br />Frontend Development</p>
           </div>
           <div class="details-container">
@@ -105,12 +105,17 @@
         </div>
         <div class="text-container">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-            reprehenderit et laborum, rem, dolore eum quod voluptate
-            exercitationem nobis, nihil esse debitis maxime facere minus sint
-            delectus velit in eos quo officiis explicabo deleniti dignissimos.
-            Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-            reiciendis ea magnam? Nulla, impedit fuga!
+           Hello, I'm Ojo Ayodele Raphael, a dedicated professional holding a BSc in 
+           Industrial Chemistry. As a tech enthusiast, I immerse myself in the world of
+           software development, showcasing a unique blend of analytical thinking 
+           and creative problem-solving. With an insatiable curiosity, I embark on each
+           coding journey with zeal, transforming challenges into opportunities for personal 
+           and professional growth.
+           My portfolio represents more than projects; it mirrors my commitment to excellence,
+           innovative thinking, and a relentless pursuit of knowledge. Beyond the screen,
+           I'm driven by the prospect of contributing to meaningful tech solutions that make 
+           a positive impact. Join me as I continue crafting a future where technology and 
+           creativity converge seamlessly.
           </p>
         </div>
       </div>
@@ -119,12 +124,12 @@
       src="./assets/arrow.png"
       alt="Arrow icon"
       class="icon arrow"
-      onclick="location.href='./#experience'"
+      onclick="location.href='./#skills'"
     />
   </section>
-  <section id="experience">
+  <section id="Skills">
     <p class="section__text__p1">Explore My</p>
-    <h1 class="title">Experience</h1>
+    <h1 class="title">Skills</h1>
     <div class="experience-details-container">
       <div class="about-containers">
         <div class="details-container">
@@ -138,7 +143,7 @@
               />
               <div>
                 <h3>HTML</h3>
-                <p>Experienced</p>
+                <p>Intermediate</p>
               </div>
             </article>
             <article>
@@ -149,17 +154,6 @@
               />
               <div>
                 <h3>CSS</h3>
-                <p>Experienced</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="./assets/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>SASS</h3>
                 <p>Intermediate</p>
               </div>
             </article>
@@ -171,7 +165,7 @@
               />
               <div>
                 <h3>JavaScript</h3>
-                <p>Basic</p>
+                <p>Intermediate</p>
               </div>
             </article>
             <article>
@@ -182,24 +176,13 @@
               />
               <div>
                 <h3>TypeScript</h3>
-                <p>Basic</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="./assets/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Material UI</h3>
                 <p>Intermediate</p>
               </div>
             </article>
           </div>
         </div>
         <div class="details-container">
-          <h2 class="experience-sub-title">Frontend Development</h2>
+          <h2 class="experience-sub-title">Backend Development</h2>
           <div class="article-container">
             <article>
               <img
@@ -208,30 +191,8 @@
                 class="icon"
               />
               <div>
-                <h3>PostgreSQL</h3>
+                <h3>MySQL</h3>
                 <p>Basic</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="./assets/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Node JS</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="./assets/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Express JS</h3>
-                <p>Intermediate</p>
               </div>
             </article>
             <article>
@@ -256,86 +217,9 @@
       onclick="location.href='./#projects'"
     />
   </section>
-  
   <section id="projects">
     <p class="section__text__p1">Browse My Recent</p>
     <h1 class="title">Projects</h1>
-    <!--div class="experience-details-container">
-      <div class="about-containers">
-        <div class="details-container color-container">
-          <div class="article-container">
-            <img
-              src="./assets/project-1.png"
-              alt="Project 1"
-              class="project-img"
-            />
-          </div>
-          <h2 class="experience-sub-title project-title">Project One</h2>
-          <div class="btn-container">
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Github
-            </button>
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Live Demo
-            </button>
-          </div>
-        </div>
-        <div class="details-container color-container">
-          <div class="article-container">
-            <img
-              src="./assets/project-2.png"
-              alt="Project 2"
-              class="project-img"
-            />
-          </div>
-          <h2 class="experience-sub-title project-title">Project Two</h2>
-          <div class="btn-container">
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Github
-            </button>
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Live Demo
-            </button>
-          </div>
-        </div>
-        <div class="details-container color-container">
-          <div class="article-container">
-            <img
-              src="./assets/project-3.png"
-              alt="Project 3"
-              class="project-img"
-            />
-          </div>
-          <h2 class="experience-sub-title project-title">Project Three</h2>
-          <div class="btn-container">
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Github
-            </button>
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Live Demo
-            </button>
-          </div>
-        </div>
-      </div>
-    </div-->
     <img
       src="./assets/arrow.png"
       alt="Arrow icon"
@@ -353,7 +237,7 @@
           alt="Email icon"
           class="icon contact-icon email-icon"
         />
-        <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+        <p><a href="mailto:ralphdel14@yahoo.com.com">ralphdel14@yahoo.com</a></p>
       </div>
       <div class="contact-info-container">
         <img
@@ -361,7 +245,7 @@
           alt="LinkedIn icon"
           class="icon contact-icon"
         />
-        <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+        <p><a href="https://linkedin.com/in/ayodele-rapheal-ojo-17426b12b">LinkedIn</a></p>
       </div>
     </div>
   </section>
@@ -370,13 +254,13 @@
       <div class="nav-links-container">
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
-    <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+    <p>Copyright &#169; 2024 Ojo Ayodele Rapheal. All Rights Reserved.</p>
   </footer>
 
 
