--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="btn-container">
         <button
           class="btn btn-color-2"
-          onclick="window.open()"
+          onclick="window.open('./assets/Ojo_Ayodele_RaphealWD.doc')"
         >
           Download CV
         </button>
