--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <div class="article-container">
             <article>
               <img
-                src="./assets/checkmark.png"
+                src="./assets/htmlimage.png"
                 alt="Experience icon"
                 class="icon"
               />
