--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
               />
               <h3>Education</h3>
               <p>B.Sc. Bachelors Degree</p>
+              <p> Software Development SAIL Innovation Lab</p>
             </div>
           </div>
           <div class="text-container">
@@ -245,12 +246,43 @@
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#contact'"
-      />
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/diamondrecipeimg.jpg"
+                alt="Diamond Recipe"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Diamond Recipe</h2>
+            <p>
+              As a Software Development Intern at <strong> SAIL</strong> , I
+              teamed up with talented developers to craft a captivating food
+              recipe website. Leveraging the Mealdb API, we curated a seamless
+              platform for discovering and mastering culinary delights. Our
+              mission was to simplify ingredient gathering and provide clear,
+              step-by-step instructions for every dish. Join us on a flavorful
+              journey where innovation meets cooking!
+            </p>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/Olori-Odo/First_Project.git'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://dmrecipe.netlify.app/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
