--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             </div>
             <h2 class="experience-sub-title project-title">Diamond Recipe</h2>
             <p>
-              As a Software Development Intern at <strong> SAIL</strong> , I
+              As a Software Developer Intern at <strong> SAIL</strong> , I
               teamed up with talented developers to craft a captivating food
               recipe website. Leveraging the Mealdb API, we curated a seamless
               platform for discovering and mastering culinary delights. Our
