--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                   class="icon"
                 />
                 <div>
-                  <h4>Intermediate</h4>
+                  <h4>HTML</h4>
                 </div>
               </article>
               <article>
@@ -154,7 +154,7 @@
                   class="icon"
                 />
                 <div>
-                  <h4>Intermediate</h4>
+                  <h4>CSS</h4>
                 </div>
               </article>
               <article>
@@ -164,7 +164,7 @@
                   class="icon"
                 />
                 <div>
-                  <h4>Intermediate</h4>
+                  <h4>JavaScript</h4>
                 </div>
               </article>
               <article>
@@ -174,7 +174,7 @@
                   class="icon"
                 />
                 <div>
-                  <h4>Intermediate</h4>
+                  <h4>TypeScript</h4>
                 </div>
               </article>
               <article>
@@ -184,7 +184,7 @@
                   class="icon"
                 />
                 <div>
-                  <h4>Intermediate</h4>
+                  <h4>React</h4>
                 </div>
               </article>
             </div>
@@ -199,7 +199,7 @@
                   class="icon"
                 />
                 <div>
-                  <h4>Intermediate</h4>
+                  <h4>NodeJs</h4>
                 </div>
               </article>
               <article>
@@ -209,7 +209,7 @@
                   class="icon"
                 />
                 <div>
-                  <h4>Intermediate</h4>
+                  <h4>Git</h4>
                 </div>
               </article>
               <article>
@@ -219,7 +219,7 @@
                   class="icon"
                 />
                 <div>
-                  <h4>Intermediate</h4>
+                  <h4>django</h4>
                 </div>
               </article>
               <article>
@@ -229,7 +229,7 @@
                   class="icon"
                 />
                 <div>
-                  <h4>Basic</h4>
+                  <h4>MySql</h4>
                 </div>
               </article>
             </div>
